app_k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: task-flow
  labels:
    ai-scaling: "enabled"

spec:
  replicas: 2

  selector:
    matchLabels:
      app: taskflow-backend

  template:
    metadata:
      labels:
        app: taskflow-backend

    spec:
      containers:
        - name: backend
          image: hazem231/todo-backend:latest

          ports:
            - containerPort: 8090

          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /api/todo
              port: 8090
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/todo
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 20
