app_k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskflow-db

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
        - name: mysql
          image: mysql:8

          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"

          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 60
            periodSeconds: 20

          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
