app_k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  labels: 
    ai-scaling: "enabled"
spec:
  replicas: 1

  selector:
    matchLabels:
      app: taskflow-frontend

  template:
    metadata:
      labels:
        app: taskflow-frontend

    spec:
      containers:
        - name: frontend
          image: hazem231/taskflow:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
