app_k8s/backend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: taskflow-backend

  ports:
    - port: 8090
      targetPort: 8090

  type: ClusterIP
