app_k8s/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: ClusterIP

  selector:
    app: taskflow-frontend

  ports:
    - port: 80
      targetPort: 80
